# gold-tracker

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.example.yml  docker-compose.yml  pyproject.toml  routes.py  utils.py  wsgi.py
.github/workflows/: docker-build-push.yml
static/: script.js  style.css
static/samples/: sample_import.csv
templates/: index.html
