[tool.poetry]
name = "gold-tracker"
version = "0.1.0"
description = "KSA Gold Investment Tracker"
authors = ["User"]
# Disable package mode since this is an application, not a library
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
# Any dev dependencies can go here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
